# ocaml-awso

./: .gitignore  .ocamlformat-ignore  CHANGES.md  CREDITS.md  LICENSE.md  Makefile  README.md  TODO.md  awso-async.opam  awso-async.opam.template  awso-cli.opam  awso-codegen.opam  awso-common.opam  awso-eio.opam  awso-lwt.opam  awso-sync.opam  awso-unix.opam  awso.opam  dune-project  service.ml
app/codegen/: awso_codegen.ml  dune
aws/: README.md
aws/accessanalyzer/: dune  endpoints.ml  values.ml
aws/accessanalyzer-async/: dune  io.mli
aws/accessanalyzer-cli-async/: awso_accessanalyzer.ml  dune
aws/accessanalyzer-lwt/: dune  io.ml
aws/account/: dune  endpoints.ml  values.ml
aws/account-async/: cli.ml  dune  io.mli
aws/account-cli-async/: dune
aws/account-lwt/: dune
aws/acm/: dune  endpoints.ml  values.ml
aws/acm-async/: cli.ml  dune  io.ml
aws/acm-cli-async/: awso_acm.ml  dune
aws/acm-lwt/: dune  io.ml
aws/acm-pca/: dune  endpoints.ml  values.ml
aws/acm-pca-async/: dune  io.ml  io.mli
aws/acm-pca-cli-async/: awso_acm_pca.ml  dune
aws/acm-pca-lwt/: dune  io.mli
aws/aiops/: dune  endpoints.ml  values.ml
aws/alexaforbusiness/: dune  endpoints.ml  values.ml
aws/alexaforbusiness-async/: dune  io.ml  io.mli
aws/alexaforbusiness-cli-async/: dune
aws/alexaforbusiness-lwt/: dune  io.ml
aws/amp/: dune  endpoints.ml  values.ml
aws/amp-async/: cli.ml  dune
aws/amp-cli-async/: dune
aws/amp-lwt/: dune
aws/amplify/: dune  endpoints.ml  values.ml
aws/amplify-async/: dune  io.ml  io.mli
aws/amplify-cli-async/: awso_amplify.ml  dune
aws/amplify-lwt/: dune  io.ml
aws/amplifybackend/: dune  endpoints.ml  values.ml
aws/amplifybackend-async/: cli.ml  dune  io.mli
aws/amplifybackend-cli-async/: dune
aws/amplifybackend-lwt/: dune  io.ml  io.mli  values.ml
aws/amplifyuibuilder/: dune  endpoints.ml  values.ml
aws/amplifyuibuilder-async/: dune
aws/amplifyuibuilder-cli-async/: awso_amplifyuibuilder.ml  dune
aws/amplifyuibuilder-lwt/: dune  io.mli
aws/apigateway/: dune  endpoints.ml  values.ml
aws/apigatewaymanagementapi/: dune  endpoints.ml  values.ml
aws/apigatewaymanagementapi-async/: dune  io.ml
aws/apigatewaymanagementapi-cli-async/: dune
aws/apigatewaymanagementapi-lwt/: dune  io.ml  io.mli
aws/apigatewayv2/: dune  endpoints.ml  values.ml
aws/appconfig/: dune  endpoints.ml  values.ml
aws/appconfigdata/: dune  endpoints.ml  values.ml
aws/appfabric/: dune  endpoints.ml  values.ml
aws/appflow/: dune  endpoints.ml  values.ml
aws/appflow-async/: dune  io.mli
aws/appflow-cli-async/: dune
aws/appflow-lwt/: dune  io.ml
aws/appintegrations/: dune  endpoints.ml  values.ml
aws/appintegrations-async/: cli.ml  dune  io.ml  io.mli
aws/appintegrations-cli-async/: awso_appintegrations.ml  dune
aws/appintegrations-lwt/: dune  io.ml
aws/application-autoscaling/: dune  endpoints.ml  values.ml
aws/application-autoscaling-async/: cli.ml  dune  io.mli
aws/application-autoscaling-cli-async/: awso_application_autoscaling.ml  dune
aws/application-autoscaling-lwt/: dune  values.ml
aws/application-insights/: dune  endpoints.ml  values.ml
aws/application-insights-async/: cli.ml  dune  io.ml
aws/application-insights-cli-async/: dune
aws/application-insights-lwt/: dune  values.ml
aws/application-signals/: dune  endpoints.ml  values.ml
aws/applicationcostprofiler-lwt/: dune
awso-cli/: README.md  awso_main.ml  dune
examples/async/: ami_import.ml  cognito_idp.ml  dune  ebs.ml  ec2.ml  ec2_describe_instances.ml  iam.ml  s3.ml  sqs.ml  test.ml  uat.ml
examples/async/athena/: athena.ml  athena.mli  awso_athena.mli  dune
examples/sync/: README.md  cloudfront_list_distributions.ml  dune  route53_list_zones.ml  route53domains_list.ml  s3_get.ml
lib/awso/: arn.ml  arn.mli  auth.ml  auth.mli  botocore_endpoints.mli  botodata.ml  cfg.ml  cfg.mli  client.ml  data.mli  dune  http.ml  http.mli  import.ml  import.mli  region.ml  region.mli  service.ml  service.mli
lib/codegen/: ast_convenience.ml  ast_convenience.mli  botocore_endpoints.ml  botocore_endpoints.mli  botocore_service.ml  botocore_service.mli  botodata.ml  cli.ml  cli.mli  cmd.ml  cmd.mli  dune  dune.ml  dune.mli  ec2_errors.ml  ec2_errors.mli  endpoint.ml  endpoint.mli  enum_other.ml  enum_other.mli  import.ml  import.mli  io.ml  io.mli  json.ml  json.mli  json_parser.ml  json_parser.mli  payload.ml  payload.mli  query_param.ml  query_param.mli  region.ml  result_decoder.ml  result_decoder.mli  service_endpoints.ml  service_endpoints.mli  service_endpoints_common.ml  service_endpoints_common.mli  service_endpoints_ec2.ml  (+20 more)
lib/runtime/awso/: arn.ml  arn.mli  auth.ml  auth.mli  botocore_endpoints.ml  botodata.ml  cfg.ml  cfg.mli  client.ml  client.mli  data.ml  dune  http.ml  http.mli  import.ml  import.mli  json.ml  region.ml  region.mli  service.ml  service.mli  uri_json.ml  uri_json.mli  xml.ml  xml.mli
opam/: awso-accessanalyzer-async.opam  awso-accessanalyzer-lwt.opam  awso-accessanalyzer.opam  awso-account-async.opam  awso-account-lwt.opam  awso-account.opam  awso-acm-async.opam  awso-acm-lwt.opam  awso-acm-pca-async.opam  awso-acm-pca-lwt.opam  awso-acm-pca.opam  awso-acm.opam  awso-alexaforbusiness-async.opam  awso-alexaforbusiness-lwt.opam  awso-alexaforbusiness.opam  awso-amp-async.opam  awso-amp-lwt.opam  awso-amp.opam  awso-amplify-async.opam  awso-amplify-lwt.opam  awso-amplify.opam  awso-amplifybackend-async.opam  awso-amplifybackend-lwt.opam  awso-amplifybackend.opam  awso-amplifyuibuilder-async.opam  awso-amplifyuibuilder-lwt.opam  awso-amplifyuibuilder.opam  awso-apigatewaymanagementapi-async.opam  awso-apigatewaymanagementapi-lwt.opam  awso-apigatewaymanagementapi.opam  awso-appflow-async.opam  awso-appflow-lwt.opam  awso-appflow.opam  awso-appintegrations-async.opam  awso-appintegrations-lwt.opam  awso-appintegrations.opam  awso-application-autoscaling-async.opam  awso-application-autoscaling-lwt.opam  awso-application-autoscaling.opam  awso-application-insights-async.opam  (+817 more)
test/: aws4_testsuite.ml  dune  import.ml  test_auth.ml
(+9865 files in other folders)
