(library
 (name awso)
 (public_name awso)
 (libraries
  awso-codegen
  base64
  cohttp
  core
  core_unix.time_float_unix
  cryptokit
  xmlm
  re.perl)
 (flags :standard)
 (ocamlopt_flags (-linscan))
 (preprocess
  (pps ppx_jane))
 (synopsis "OCaml AWS general API.")
 (inline_tests))

(rule
 (deps
  (:endpoints %{project_root}/vendor/botocore/botocore/data/endpoints.json))
 (action
  (with-stdout-to
   botocore_endpoints.ml
   (run %{bin:awso-codegen} botocore-endpoints --endpoints %{endpoints}))))
