(library
 (name awso_codegen)
 (public_name awso-codegen)
 (libraries
  awso_common
  unix
  yojson
  xmlm
  ocamlgraph
  ppxlib
  ppxlib.ast
  ppxlib.astlib
  sedlex
  re.pcre
  uri)
 (flags :standard -open Ppxlib)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_let sedlex.ppx ppxlib.metaquot)))
