(library
 (name awso)
 (public_name awso)
 (libraries
  awso-codegen
  awso_common
  base64
  cohttp
  core
  core_unix.time_float_unix
  cryptokit
  xmlm
  yojson
  re.perl)
 (ocamlopt_flags (-linscan))
 (preprocess
  (pps ppx_jane ppx_yojson_conv))
 (synopsis "OCaml AWS general API.")
 (inline_tests))
